# gentoo-update

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  README-fr.md  README.MD  README.md  gentoo-update  gentoo-update.cpp
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  other.md
.github/workflows/: CI.yml  build.yml  mdl_style.rb
Github/: CHANGELOG.md  CMakeLists.txt  LICENSE  PKGBUILD  README.md  RELEASE.md
Github/doc/man/: gentoo-update.1  gentoo-update.conf.5
Github/po/: fr.po  gentoo-update.pot
Github/res/completions/: gentoo-update.bash  gentoo-update.fish  gentoo-update.zsh
Github/res/desktop/: gentoo-update.desktop
Github/res/icons/: README.md
Github/res/systemd/: gentoo-update-tray.service  gentoo-update.timer
Github/src/lib/: check.hpp  distfiles.hpp  kernel_reboot.hpp  list_news.hpp  tray.hpp  tray.py
Github/test/case/: notification_test.sh  tray_test.sh
guru-guide/: 01-prerequisites.md  02-repository-setup.md  03-ebuild-preparation.md  04-qa-checks.md  05-testing-installation.md  06-committing-changes.md  07-pushing-to-guru.md  08-stabilization.md  09-access-request.md  10-troubleshooting.md  README.md
res/config/: gentoo-update.conf.example
res/desktop/: gentoo-update-tray.desktop
res/systemd/: gentoo-update.service
src/lib/: common.hpp  config.hpp  config_files.hpp  full_upgrade.hpp  list_packages.hpp  notification.hpp  packages_cache.hpp  restart_services.hpp
test/case/: all_commands_test.sh  basic_functions.sh
